--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@heroicons/react": "1.0.6",
     "next": "12.2.2",
+    "next-auth": "4.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
