--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@apollo/client": "3.6.9",
     "@heroicons/react": "1.0.6",
+    "graphql": "16.5.0",
     "next": "12.2.2",
     "next-auth": "4.10.0",
     "react": "18.2.0",
