--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "12.2.2",
     "next-auth": "4.10.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.33.1"
   },
   "devDependencies": {
     "@types/node": "16.0.0",
