--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next-auth": "4.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "7.33.1"
+    "react-hook-form": "7.33.1",
+    "react-hot-toast": "2.3.0"
   },
   "devDependencies": {
     "@types/node": "16.0.0",
