--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.33.1",
-    "react-hot-toast": "2.3.0"
+    "react-hot-toast": "2.3.0",
+    "react-timeago": "7.1.0"
   },
   "devDependencies": {
     "@types/node": "16.0.0",
     "@types/react": "18.0.15",
+    "@types/react-timeago": "4.1.3",
     "@typescript-eslint/eslint-plugin": "5.30.5",
     "autoprefixer": "10.4.7",
     "eslint": "8.19.0",
