--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@apollo/client": "3.6.9",
     "@heroicons/react": "1.0.6",
+    "@uiball/loaders": "1.2.6",
     "graphql": "16.5.0",
     "next": "12.2.2",
     "next-auth": "4.10.0",
